tracing/sentry/sentry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: sentry
      application: sentry
  template:
    metadata:
      labels:
        name: sentry
        application: sentry
      annotations:
        checksum/environment: ${ENV_SHA}
    spec:
      containers:
      - name: sentry
        image: sentry:9
        command:
          - sentry
          - run
          - web
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "2"
            memory: "800Mi"
      - name: sentry-cron
        image: sentry:9
        command:
          - sentry
          - run
          - cron
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "400Mi"
      - name: sentry-worker
        image: sentry:9
        command:
          - sentry
          - run
          - worker
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "2"
            memory: "800Mi"
