tracing/sentry/sentry-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sentry
spec:
  ports:
  - name: web
    port: 9000
    protocol: TCP
  selector:
    application: sentry
